# aprs-service-registry

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.rst  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  setup.cfg  tox.ini
.gitea/workflows/: build-container.yml  pr-checks.yml
.superpowers/brainstorm/516-1774544355/: .server-info  docs-layout.html
aprs_service_registry/: __init__.py  cli.py  cli_helper.py  db.py  gitstore.py  health_checker.py  log.py  main.py  objectstore.py
aprs_service_registry/conf/: __init__.py  common.py
aprs_service_registry/utils/: __init__.py  trace.py
aprs_service_registry/web/static/: main.css
aprs_service_registry/web/templates/: about.html  developers.html  docs_base.html  faq.html  guide.html  index.html  service_types.html  services.html
aprs_service_registry/web/templates/admin/: base.html  commands.html  dashboard.html  service_detail.html  service_new.html  services.html
config/: registry.conf.example
docs/specs/: 2025-05-25-sqlite-migration-design.md
docs/superpowers/plans/: 2026-03-23-get-services-api.md  2026-03-24-health-check.md  2026-03-24-service-status.md  2026-03-26-card-ui-implementation.md
docs/superpowers/specs/: 2026-03-23-get-services-api-design.md  2026-03-24-health-check-design.md  2026-03-24-service-status-design.md  2026-03-26-api-rate-limiting-design.md  2026-03-26-card-ui-design.md  2026-03-26-documentation-rework-design.md  card-ui-mockup.html
tests/: conftest.py  test_api.py  test_db.py  test_health_checker.py
