[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aprsd-service-registry"
version = "1.5.0"
description = "Amateur radio APRS Services registry"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Walter A. Boring IV", email = "waboring@hemna.com" },
]
urls = { Homepage = "http://aprsd.readthedocs.org", Source = "https://github.com/hemna/aprsd-service-registry", Tracker = "https://github.com/hemna/aprsd-service-registry/issues" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Communications :: Ham Radio",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click",
    "fastapi",
    "fastapi-utils",
    "jinja2",
    "loguru",
    "oslo.config",
    "slowapi",
    "typing-inspect",
    "uvicorn",
    "wrapt",
    "aprsd @ git+https://github.com/craigerl/aprsd.git",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "gray",
    "isort",
    "mypy",
    "pep8-naming",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "Sphinx",
    "tox",
]

[project.scripts]
aprs-service-registry = "aprs_service_registry.cli:main"

[tool.setuptools.packages.find]
include = ["aprs_service_registry*"]

[tool.setuptools.package-data]
aprs_service_registry = ["web/static/*", "web/templates/*", "web/templates/**/*"]
