[metadata]
name = aprsd-service-registry
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://aprsd.readthedocs.org
author = Walter A. Boring IV
author_email = waboring@hemna.com
license = Apache
license_file = LICENSE
classifier =
    License :: OSI Approved :: Apache Software License
    Topic :: Communications :: Ham Radio
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description_file =
    README.rst
project_urls =
    Source=https://github.com/hemna/aprsd-service-registry
    Tracker=https://github.com/hemna/aprsd-service-registry/issues
summary = Amateur radio APRS Services registry

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    aprsd_services_registry

[entry_points]
oslo.config.opts =
    aprsd_irc.conf = aprsd_irc.conf.opts:list_opts

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build

[bdist_wheel]
universal = 1
